# terminator

./: Cargo.toml  README.md  backtrace.html
src/: backtrace.rs  compat.rs  config.rs  consts.rs  error.rs  indent.rs  lib.rs  location.rs  macros.rs  panic.rs  theme.rs  verbosity.rs
src/backtrace/: convert.rs  display.rs  filter.rs
src/error/: eyreimpl.rs  stdimpl.rs
