[package]
name = "terminator"
description = "Formatter for pretty panics and errors"
repository = "https://github.com/rkuklik/terminator"
license = "MIT OR Apache-2.0"
keywords = ["error", "backtrace"]
categories = [
  "rust-patterns",
  "command-line-interface",
  "development-tools::debugging",
  "value-formatting",
]
edition = "2021"
version = "0.3.0"
authors = ["Kuklík Radek <kuklik dot radek at centrum dot cz>"]

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

module-name-repetitions = "allow"

[lints.rust]
missing-docs = "warn"
unexpected-cfgs = "allow"
unsafe-code = "deny"

[dependencies]
#backtrace = { version = "0.3", optional = true }
anyhow = { version = "1", optional = true }
eyre = { version = "0.6", optional = true }

[features]
default = []
anyhow = ["dep:anyhow"]
eyre = ["dep:eyre"]
compat = ["dep:anyhow", "dep:eyre"]

[package.metadata.docs.rs]
features = ["compat"]
targets = []
